...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JFy-ZD-cI4">
                                                <rect key="frame" x="0.0" y="260.5" width="314" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="name_Item"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z6E-HI-cyh" customClass="DropDown" customModule="iOSDropDown">
                                                <rect key="frame" x="0.0" y="449.5" width="314" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="uom_Item"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mmu-13-gFO">
                                                        <rect key="frame" x="0.0" y="0.0" width="176" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="nonUnitPrice_Item"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="itemDetailView"/>
                        <constraints>
                            <constraint firstItem="yMX-fB-tm0" firstAttribute="trailing" secondItem="yuD-tN-1U6" secondAttribute="trailing" constant="20" id="9eb-0O-zjM"/>
...
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="itemsMainView"/>
                        <constraints>
                            <constraint firstItem="nXR-1a-R4p" firstAttribute="leading" secondItem="DqH-kJ-ACf" secondAttribute="leading" id="2H8-eo-oM4"/>
...
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="itemListView"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="jZG-hH-QBQ" secondAttribute="trailing" id="8rz-7W-JTg"/>
...
