...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                        <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="homeItemsListView"/>
                                        <gestureRecognizers/>
                                        <constraints>
                                            <constraint firstItem="1ti-hl-vPd" firstAttribute="leading" secondItem="g5L-n1-4E3" secondAttribute="trailing" constant="20" id="Gbm-eK-ZK2"/>
                                            <constraint firstAttribute="height" constant="80" id="L4b-jh-Seb"/>
                                            <constraint firstItem="g5L-n1-4E3" firstAttribute="top" secondItem="Dtk-Re-rt3" secondAttribute="top" constant="5" id="LpA-Rs-DnU"/>
                                            <constraint firstItem="g5L-n1-4E3" firstAttribute="leading" secondItem="Dtk-Re-rt3" secondAttribute="leading" constant="10" id="SSH-Nq-HwY"/>
...
                                        </connections>
                                    </view>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="homeView"/>
                        <constraints>
                            <constraint firstItem="Ddp-rc-pz1" firstAttribute="trailing" secondItem="zLT-i6-kGj" secondAttribute="trailing" constant="20" id="6Qf-qZ-hfA"/>
                            <constraint firstItem="zLT-i6-kGj" firstAttribute="leading" secondItem="Ddp-rc-pz1" secondAttribute="leading" constant="20" id="bLo-nY-C48"/>
                            <constraint firstItem="t0o-P1-DeQ" firstAttribute="top" secondItem="zLT-i6-kGj" secondAttribute="bottom" constant="40" id="iBD-rO-0x0"/>
                            <constraint firstItem="t0o-P1-DeQ" firstAttribute="leading" secondItem="Ddp-rc-pz1" secondAttribute="leading" constant="20" id="lhQ-iw-hPK"/>
                            <constraint firstItem="zLT-i6-kGj" firstAttribute="top" secondItem="Ddp-rc-pz1" secondAttribute="top" constant="20" id="oAX-nk-yML"/>
...
